--- a/productList/productList.html
+++ b/productList/productList.html
@@ -19,18 +19,31 @@
             />
             <div class="discount-percentage">-13%</div>
           </div>
-          <div class="product-descriptio">
+          <div class="product-details">
             <div class="product-name">iPhone 9</div>
-            <div class="">
-              <span class="star-rating">&#9733;</span> 4.69 Stars ******
+            <div class="star-rating">
+              <span class="star-1">&#9733;</span>
+              <span class="star-2">&#9733;</span>
+              <span class="star-3">&#9733;</span>
+              <span class="star-4">&#9733;</span>
+              <span class="star-5 partial">&#9733;</span> 4.69 Stars ******
             </div>
-            <div>An apple mobile which is nothing like apple</div>
+            <div class="description">
+              An apple mobile which is nothing like apple An apple mobile which
+              An apple mobile which is nothing like apple An apple mobile which
+              is nothing like apple
+            </div>
           </div>
           <div>
-            <div>
-              $<span>549</span><sup>$<span>549</span></sup>
+            <div class="price">
+              <div>$<span class="final-price">549</span></div>
+              <div>
+                <sup
+                  ><s>$<span class="original-price">549</span></s></sup
+                >
+              </div>
             </div>
-            <div><button>Add to Cart</button></div>
+            <div><button class="btn-add-to-cart">Add to Cart</button></div>
           </div>
         </div>
       </div>
