--- a/autocomplete/beEvanListener/autocomplete.html
+++ b/autocomplete/beEvanListener/autocomplete.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="my-3">
         <input
-          onkeydown="filterPhrases()"
+          onkeydown="filterPhrases(event)"
           type="text"
           class="form-control"
           placeholder="Įveskite paieškos frazę"
